# MPD-Presence

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  mpd_discord_rpc
src/: .vimspector.json  album_art.cpp  album_art.hpp  config.cpp  config.h  config.hpp  logging.hpp  main.cpp  mpd.cpp  mpd.hpp  rpc.cpp  rpc.hpp
